syntax = "proto3";

package proto;
option go_package = "proto";

import "google/api/annotations.proto";
import "protoc-gen-swagger/options/annotations.proto";

option (grpc.gateway.protoc_gen_swagger.options.openapiv2_swagger) = {
  info: {
    title: "Settings";
    version: "1.0";
    contact: {
      name: "ownCloud GmbH";
      url: "https://github.com/owncloud/ocis-settings";
      email: "support@owncloud.com";
    };
    license: {
      name: "Apache-2.0";
      url: "https://github.com/owncloud/ocis-settings/blob/master/LICENSE";
    };
  };
  schemes: HTTP;
  schemes: HTTPS;
  consumes: "application/json";
  produces: "application/json";
  external_docs: {
    description: "Developer Manual";
    url: "http://owncloud.github.io/extensions/ocis_settings/";
  };
};

service BundleService {
  rpc CreateSettingsBundle(CreateSettingsBundleRequest) returns (CreateSettingsBundleResponse) {
    option (google.api.http) = {
      post: "/api/v0/settings/bundles",
      body: "*"
    };
  };
  rpc GetSettingsBundle(GetSettingsBundleRequest) returns (GetSettingsBundleResponse) {
    option (google.api.http) = {
      get: "/api/v0/settings/bundles/{extension}/{bundle_key}"
    };
  };
  rpc ListSettingsBundles(ListSettingsBundlesRequest) returns (ListSettingsBundlesResponse) {
    option (google.api.http) = {
      get: "/api/v0/settings/bundles"
    };
  };
}

service ValueService {
  rpc SaveSettingsValue(SaveSettingsValueRequest) returns (SaveSettingsValueResponse) {
    option (google.api.http) = {
      post: "/api/v0/settings/values",
      body: "*"
    };
  };
  rpc GetSettingsValue(GetSettingsValueRequest) returns (GetSettingsValueResponse) {
    option (google.api.http) = {
      get: "/api/v0/settings/values/{account_uuid}/{extension}/{bundle_key}/{setting_key}"
    };
  };
}

// requests and responses for settings bundles
message CreateSettingsBundleRequest {
  SettingsBundle settings_bundle = 1;
}

message CreateSettingsBundleResponse {
  SettingsBundle settings_bundle = 1;
}

message GetSettingsBundleRequest {
  string extension = 1;
  string bundle_key = 2;
}

message GetSettingsBundleResponse {
  SettingsBundle settings_bundle = 1;
}

message ListSettingsBundlesRequest {
  string extension = 1;// can be limited to all settings bundles of an extension
}

message ListSettingsBundlesResponse {
  repeated SettingsBundle settings_bundles = 1;
}

// requests and responses for settings values
message SaveSettingsValueRequest {
  SettingsValue settings_value = 1;
}

message SaveSettingsValueResponse {
  SettingsValue settings_value = 1;
}

message GetSettingsValueRequest {
  string account_uuid = 1;
  string extension = 2;
  string bundle_key = 3;
  string setting_key = 4;
}

message GetSettingsValueResponse {
  SettingsValue settings_value = 1;
}

// payloads for settings bundles
message SettingsBundle {
  string extension = 1;
  string bundle_key = 2;
  string display_name = 3;
  repeated Setting settings = 4;
}

message Setting {
  string setting_key = 1;
  string display_name = 2;
  string description = 3;
  oneof value {
    IntSetting int_value = 4;
    StringSetting string_value = 5;
    BoolSetting bool_value = 6;
    SingleChoiceListSetting single_choice_value = 7;
    MultiChoiceListSetting multi_choice_value = 8;
  }
}

message IntSetting {
  int64 default = 1;
  int64 min = 2;
  int64 max = 3;
  int64 step = 4;
  string placeholder = 5;
}

message StringSetting {
  string default = 1;
  bool required = 2;
  int32 min_length = 3;
  int32 max_length = 4;
  string placeholder = 5;
}

message BoolSetting {
  bool default = 1;
  string label = 2;
}

message SingleChoiceListSetting {
  repeated ListOption options = 1;
}

message MultiChoiceListSetting {
  repeated ListOption options = 1;
}

message ListOption {
  oneof option {
    string string_value = 1;
    int64 int_value = 2;
  }
  bool default = 3;
  string display_value = 4;
}

// payloads for settings values
message SettingsValue {
  string account_uuid = 1;
  string extension = 2;
  string bundle_key = 3;
  string setting_key = 4;
  oneof value {
    bool bool_value = 5;
    int64 int_value = 6;
    string string_value = 7;
    IntListValue int_list_value = 8;
    StringListValue string_list_value = 9;
  }
}

message IntListValue {
  repeated int64 value = 1;
}

message StringListValue {
  repeated string value = 1;
}

// only meant for serialization
message SettingsValues {
  map<string,SettingsValue> values = 1;
}
